Fix addr/phone/email icon on smaller screens

--- a/src/Presets/northwestern-stubs/sass/nu_purple_layout.scss
+++ b/src/Presets/northwestern-stubs/sass/nu_purple_layout.scss
@@ -87,7 +87,10 @@ footer ul li {
     height: 24px;
     width: 18px;
     margin-right: 1rem;
-    margin-left: -1rem;
+
+    @include media-breakpoint-up(lg) {
+        margin-left: -1rem;
+    }
 }
 
 .address-pin {
